# runmunch

./: Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: release.yml
examples/: basic_usage.rs
src/: affix.rs  dictionary.rs  error.rs  expander.rs  lib.rs
tests/: integration_tests.rs
