[package]
name = "runmunch"
version = "0.5.0"
edition = "2021"
description = "A Rust implementation of hunspell's unmunch tool for expanding dictionary words using affix files"
license = "MIT OR Apache-2.0"
authors = ["VLatko Kosturjak"]

[[bin]]
name = "runmunch"
path = "src/bin/main.rs"

[dependencies]
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
